# Codeforces

./: README.md  cf_sync_config.json  cf_sync_state.json  pyproject.toml
.github/workflows/: cf_sync.yml
1100/1873E/: README.md
900/1675B/: README.md  solution.py
cf_sync/: __init__.py  cf_api.py  cli.py  git_manager.py  repo_builder.py  resolver.py
cf_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
solutions/: 1873E.py
tests/: test_integration.py  test_repo_builder.py  test_resolver.py
